--- a/blink/blink.ioc
+++ b/blink/blink.ioc
@@ -11,17 +11,18 @@ Mcu.Name=STM32L476R(C-E-G)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PB3 (JTDO-TRACESWO)
-Mcu.Pin11=VP_SYS_VS_Systick
+Mcu.Pin10=PA14 (JTCK-SWCLK)
+Mcu.Pin11=PB3 (JTDO-TRACESWO)
+Mcu.Pin12=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
 Mcu.Pin3=PH0-OSC_IN (PH0)
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
-Mcu.Pin8=PA13 (JTMS-SWDIO)
-Mcu.Pin9=PA14 (JTCK-SWCLK)
-Mcu.PinsNb=12
+Mcu.Pin8=PA10
+Mcu.Pin9=PA13 (JTMS-SWDIO)
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L476RGTx
@@ -39,6 +40,12 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+PA10.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA10.GPIO_Label=B2 [external button]
+PA10.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA10.GPIO_PuPd=GPIO_PULLUP
+PA10.Locked=true
+PA10.Signal=GPXTI10
 PA13\ (JTMS-SWDIO).GPIOParameters=GPIO_Label
 PA13\ (JTMS-SWDIO).GPIO_Label=TMS
 PA13\ (JTMS-SWDIO).Locked=true
@@ -174,6 +181,8 @@ RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=160000000
 RCC.VCOSAI1OutputFreq_Value=128000000
 RCC.VCOSAI2OutputFreq_Value=128000000
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
